Added dropdown bar and some manufacturer pages

--- a/BlazorWebAssembly/Pages/News.razor
+++ b/BlazorWebAssembly/Pages/News.razor
@@ -5,8 +5,8 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
-    <div class="row">
-        <h2>News</h2>
+    <div class="title-text">
+        <p><h2 style="text-align:center">News</h2></p>
     </div>
 </div>
 
@@ -42,8 +42,7 @@
                             HOT TOPIC: Will Hulkenberg race again?
                         </a>
                     </h1>
-                    <span class="meta">
-                        <span><i class="glyphicon glyphicon-comment"></i> <a href="http://wordpress.thebebel.com/showcase/newsbook/2015/01/19/meet-asias-best-destinations-for-the-summer/#respond">No Comments</a></span>
+                    <span class="meta"> 
                         <span><i class="glyphicon glyphicon-time"></i> Aug 5, 2020</span>
                     </span>
                 </div>
@@ -63,8 +62,7 @@
                         </a>
                     </h1>
                     <span class="meta">
-                        <span><i class="glyphicon glyphicon-comment"></i> <a href="http://wordpress.thebebel.com/showcase/newsbook/2015/01/19/meet-asias-best-destinations-for-the-summer/#respond">No Comments</a></span>
-                        <span><i class="glyphicon glyphicon-time"></i> Sep 15, 2015</span>
+                        <span><i class="glyphicon glyphicon-time"></i>Aug 2, 2020</span>
                     </span>
                 </div>
                 <img src="https://cdn-1.motorsport.com/images/amp/Y99nyQqY/s6/max-verstappen-red-bull-racing.jpg" alt="Lucky verstappen"
@@ -74,19 +72,18 @@
             <div class="box-item">
                 <div class="box-post">
                     <span class="label label-success">
-                        <a href="#" rel="tag">Tech</a>
+                        <a href="#" rel="tag">News</a>
                     </span>
                     <h1 class="post-title">
-                        <a href="#">
-                            Why Apple shouldn’t be selling a 16GB iPhone 6S or 6S Plus
+                        <a href="https://www.formula1.com/en/latest/article.breaking-valtteri-bottas-signs-new-deal-to-drive-for-mercedes-in-2021.5kdl5Krly4Y3Z1l6dCVJjy.html">
+                            Valtteri Bottas signs new deal to drive for Mercedes in 2021
                         </a>
                     </h1>
                     <span class="meta">
-                        <span><i class="glyphicon glyphicon-comment"></i> <a href="http://wordpress.thebebel.com/showcase/newsbook/2015/01/19/meet-asias-best-destinations-for-the-summer/#respond">No Comments</a></span>
-                        <span><i class="glyphicon glyphicon-time"></i> Sep 15, 2015</span>
+                        <span><i class="glyphicon glyphicon-time"></i> Aug 3, 2020</span>
                     </span>
                 </div>
-                <img src="https://i.guim.co.uk/img/media/bbf4a7d1df33ad2604638c03787e7eb0e1f17394/0_149_3000_1800/master/3000.jpg?w=700&q=85&auto=format&sharp=10&s=3ecfcbb58d169db2a27a9718e4689b83" alt="Why Apple shouldn’t be selling a 16GB iPhone 6S or 6S Plus"
+                <img src="https://www.formula1.com/content/dam/fom-website/sutton/2020/Styria/Sunday/1255748484.jpg.transform/9col/image.jpg" alt="Why Apple shouldn’t be selling a 16GB iPhone 6S or 6S Plus"
                      class="">
             </div>
 
