--- a/BlazorWebAssembly/Pages/F1Winners.razor
+++ b/BlazorWebAssembly/Pages/F1Winners.razor
@@ -5,7 +5,11 @@
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.Util
 
-<h3>F1Winners</h3>
+    <div class="container">
+        <div class="title-text">
+            <p><h2 style="text-align:center">Formula 1 Statistics</h2></p>
+        </div>
+    </div>
 <ChartJsPieChart @ref="_pieChartJs" Config="@_config" Width="600" Height="300" />
 
 
