--- a/BlazorWebAssembly/Shared/NavMenu.razor
+++ b/BlazorWebAssembly/Shared/NavMenu.razor
@@ -1,14 +1,13 @@
 ﻿
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Formula 1</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a>
+            <img src="https://ssl.gstatic.com/onebox/media/sports/logos/lTM9VlVyyG5jgF4UHAx94g_64x64.png">
+        </a>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">News <span class="sr-only">(current)</span></a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">News</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="winners">Statistics</a>
@@ -18,8 +17,14 @@
                         Manufacturers
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">McLaren</a>
+                        <a class="dropdown-item" href="#">Ferrari</a>
+                        <a class="dropdown-item" href="#">Renault</a>
+                        <a class="dropdown-item" href="mercedes">Mercedes</a>
+                        <a class="dropdown-item" href="#">Redbull</a>
+                        <a class="dropdown-item" href="#">Racing Point</a>
+                        <a class="dropdown-item" href="#">Haas</a>
+                        <a class="dropdown-item" href="Williams">Williams</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
